--- a/data.ipynb
+++ b/data.ipynb
@@ -14,71 +14,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 1,
    "id": "0b6bedb9-e30c-4dc4-8a0d-e38202ca6bcd",
    "metadata": {},
    "outputs": [],
    "source": [
     "# relevant imports\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from collections import defaultdict\n",
-    "from sqlalchemy import create_engine, inspect"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "55116f36-521f-4f9b-9e07-b515da2d3efe",
-   "metadata": {},
-   "source": [
-    "Reading the climate data:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "id": "cedf9342-1b08-4d15-9387-c9a0fae7183f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "c_path = \"weather/prod/climate.db\"\n",
-    "c_engine = create_engine(\"sqlite:///\"+c_path, echo=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 21,
-   "id": "3e6be6d5-f875-4a00-8456-9ecab9212638",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# function for reading only the required data\n",
-    "def load_climate_data(con, nuts_lvl):\n",
-    "    # read tables in db\n",
-    "    insp = inspect(con)\n",
-    "    tables = insp.get_table_names()\n",
-    "    tables = [x for x in tables if x[0] == str(nuts_lvl)]\n",
-    "    # create dataframe\n",
-    "    df = pd.DataFrame()\n",
-    "    for table in tables:\n",
-    "        tmp = pd.read_sql_table(table, con)\n",
-    "        tmp[\"table_name\"] = table\n",
-    "        if df.empty:\n",
-    "            df = tmp\n",
-    "        else:\n",
-    "            df = pd.concat([df, tmp], ignore_index=True)\n",
-    "    return df"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "id": "a1a0148a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nuts_lvl = 1\n",
-    "df_climate = load_climate_data(c_engine, nuts_lvl=nuts_lvl) "
+    "import numpy as np\n"
    ]
   },
   {
@@ -90,16 +33,17 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "id": "a2653846-12d9-406e-9fa7-0a04f269e70f",
    "metadata": {},
    "source": [
-    "Because the individual questionair file is quite big we will merge it chunkwise with the weather and household data. Therefore we first read the hh files. All the required hh data can be found in two different data sets. These are merged in the following:"
+    "Because the individual questionair file is quite big we will merge it soepwise with the weather and household data. Therefore we first read the hh files. All the required hh data can be found in two different data sets. These are merged in the following:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "id": "ddb4e8df-9113-4f22-9911-072310b4aa98",
    "metadata": {},
    "outputs": [],
@@ -127,25 +71,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "id": "77010969-2ce6-4900-ad79-8ba7c4c56e68",
    "metadata": {},
    "outputs": [],
    "source": [
-    "hl_var = {\n",
-    "    \"syear\":\"year\", # survey year -> prim. key\n",
-    "    \"hid\":\"hid\", # hh id -> prim. key\n",
+    "hl_var = [\n",
+    "    # keys for merging\n",
+    "    \"syear\", # survey year -> prim. key\n",
+    "    \"hid\", # hh id -> prim. key\n",
     "    # hh control variables:\n",
-    "    \"hlc0005_h\":\"hh_income\", #[de] Monatliches HH-Netto-Einkommen [harmonisiert]\n",
-    "    \"hlc0043\":\"hh_children\", # Number Children\n",
-    "    \"hlf0001_h\":\"homeownership\", # Homewonership\n",
-    "    \"hlk0056\":\"interview_type\", # Type of interview\n",
-    "} # \n",
+    "    \"hlc0005_h\", #[de] Monatliches HH-Netto-Einkommen [harmonisiert]\n",
+    "    \"hlc0043\", # Number Children\n",
+    "    \"hlf0001_h\", # Homewonership\n",
+    "    \"hlk0056\" # Type of interview\n",
+    "] # \n",
     "\n",
     "hbrutto_var = {\n",
-    "    \"syear\":\"year\", # survey year -> prim. key\n",
-    "    \"hid\":\"hid\", # hh id -> prim. key\n",
-    "    \"bula_h\":\"sloc\" # location -> bundesland\n",
+    "    \"syear\",  # survey year -> prim. key\n",
+    "    \"hid\",  # hh id -> prim. key\n",
+    "    \"bula_h\" # location -> bundesland\n",
     "}"
    ]
   },
@@ -159,24 +104,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "id": "6c2ec0f3-5dba-481e-9ef9-405a47fd885b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hl = pd.read_csv(hl_path, usecols=hl_var.keys())"
+    "df_hl = pd.read_csv(hl_path, usecols=hl_var)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 5,
    "id": "f351c1b0-7d6e-4609-93b7-86f60989d99f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_hbrutto = pd.read_csv(hbrutto_path, usecols=hbrutto_var.keys())\n",
-    "# change location variable to be able to merge with weather data\n",
-    "df_hbrutto.rename({\"bula_h\":\"sloc\"}, axis=1, inplace=True)"
+    "df_hbrutto = pd.read_csv(hbrutto_path, usecols=hbrutto_var)"
    ]
   },
   {
@@ -189,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 6,
    "id": "e1fab759-5662-4502-955b-f05272a2cd3f",
    "metadata": {},
    "outputs": [],
@@ -206,27 +149,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 28,
-   "id": "829275d5-bffa-488b-862a-5e3b18825329",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# clear db\n",
-    "!echo > ./prod/data.db"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "id": "c6112267-1e23-4a93-ab9e-0f7c077d9a82",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "engine = create_engine(\"sqlite:///prod/data.db\", echo=False)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "3264fa14-2a64-48ad-8382-a719d4a608bf",
    "metadata": {},
@@ -236,7 +158,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 7,
    "id": "c5f2098d-36f8-4798-a465-fd6113dcb620",
    "metadata": {},
    "outputs": [],
@@ -248,45 +170,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 8,
    "id": "52c2cd27-a42c-4bd6-9899-b569ee227b2e",
    "metadata": {},
    "outputs": [],
    "source": [
     "ppathl_var = {\n",
-    "    \"pid\":\"pid\", # person id -> prim. key\n",
-    "    \"syear\":\"year\", #survey year -> prim. key\n",
+    "    \"pid\", # person id -> prim. key\n",
+    "    \"syear\", #survey year -> prim. key\n",
     "    # relevant covariates\n",
-    "    \"sex\":\"sex\", # gender [1] female [2] male\n",
-    "    \"gebjahr\":\"birth_year\", # year of birth\n",
-    "    \"partner\":\"relationship\", # [0] no partner, [1] spouse, [2] partner,\n",
+    "    \"sex\", # gender [1] female [2] male\n",
+    "    \"gebjahr\", # year of birth\n",
+    "    \"partner\" # [0] no partner, [1] spouse, [2] partner,\n",
     "                              # [3] Probably spouse, [4] probably partner\n",
-    "                              # NOTE: join 1&3 and 2&4\n",
+    "    # NOTE: join 1&3 and 2&4\n",
     "}\n",
     "\n",
     "pequiv_var = {\n",
-    "    \"pid\":\"pid\", # person id -> prim. key\n",
-    "    \"syear\":\"year\", #survey year -> prim. key\n",
-    "    \"d11109\":\"education_years\", #years of education\n",
-    "    \"m11124\":\"disability_status\", #Disability status\n",
-    "    \"e11103\":\"\" #Labor Participation\n",
+    "    \"pid\", # person id -> prim. key\n",
+    "    \"syear\", #survey year -> prim. key\n",
+    "    \"d11109\", #years of education: Year of eduction: numerical\n",
+    "    # NOTE: many nan values\n",
+    "    \"m11124\", # Disability status: [0] Not Disabled, [1] Disabled\n",
+    "    \"e11103\" # Labor Participation: [1] Full Time, [2] Part Time, [3] Not Working\n",
     "}\n",
     "\n",
     "pl_var = {\n",
     "    # ids\n",
-    "    \"pid\":\"pid\", # person id -> prim. key\n",
-    "    \"syear\":\"year\", #survey year -> prim. key\n",
-    "    \"hid\":\"hid\", # hh id -> prim. key\n",
+    "    \"pid\",  # person id -> prim. key\n",
+    "    \"syear\",  #survey year -> prim. key\n",
+    "    \"hid\",  # hh id -> prim. key\n",
     "    # target variable\n",
-    "    \"plh0182\":\"swb\", # Current life dsatisfaction [0-10]\n",
+    "    \"plh0182\", # Current life satisfaction [0-10]\n",
     "    # relevant covariates\n",
-    "    \"ptagin\":\"day\", #day of interview\n",
-    "    \"pmonin\":\"month\", #month of interview\n",
-    "    \"plh0171\":\"satisfaction_health\", # Current Health [1-5] (0=schlecht, 10=gut)\n",
-    "    \"plb0021\":\"unemployed\", # [2] No [1] Yes\n",
-    "    \"plh0173\":\"satisfaction_work\", # [0-10] not satisfied <-> very satisfied, NOTE: many nan\n",
-    "    \"plh0174\":\"satisfaction_work_hh\", # same as above (NOTE: maybe take max of both?)\n",
-    "    \"plh0175\":\"satisfaction_income\" # Satisfaction With Household Income\n",
+    "    \"ptagin\",  # day of interview\n",
+    "    \"pmonin\",  # month of interview\n",
+    "    \"plh0171\",  # Current Health: [1-5] (1=schlecht, 10=gut)\n",
+    "    \"plb0021\",  # Arbeitslos gemeldet: [2] No [1] Yes\n",
+    "    \"plh0173\",  # satisfaction with work: [0-10] not satisfied <-> very satisfied\n",
+    "    \"plh0174\",  # satisfaction with home work:  [0-10] not satisfied <-> very satisfied \n",
+    "    # NOTE: take max of plh0173 and plh0174\n",
+    "    \"plh0175\" # Satisfaction With Household Income\n",
     "}"
    ]
   },
@@ -300,22 +224,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 9,
    "id": "03cec35e-1be9-47ee-af5d-49d1a3e1a359",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var.keys())"
+    "df_ppathl = pd.read_csv(ppathl_path, usecols=ppathl_var)\n",
+    "# because [3] approx [1] and [4] approx [2]:\n",
+    "df_ppathl[df_ppathl['partner'] == 3] = 1\n",
+    "df_ppathl[df_ppathl['partner'] == 4] = 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 10,
    "id": "271322be",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_pequiv = pd.read_csv(pequiv_path, usecols=pequiv_var.keys())"
+    "df_pequiv = pd.read_csv(pequiv_path, usecols=pequiv_var)"
    ]
   },
   {
@@ -329,49 +256,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 12,
    "id": "f61636b6-625a-401e-9cf7-dd64f79f43d5",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "722380"
-      ]
-     },
-     "execution_count": 34,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "chunk = pd.read_csv(pl_path, usecols=pl_var.keys())\n",
+    "soep = pd.read_csv(pl_path, usecols=pl_var)\n",
+    "# because (plh0173 approx plh0174):\n",
+    "soep[\"plh0173\"] = soep[[\"plh0173\", \"plh0174\"]].max()\n",
+    "soep.drop(columns=\"plh0174\", inplace=True)\n",
     "\n",
     "## MERGE WITH OTHER DATASETS\n",
     "# merge with tracking data\n",
-    "chunk = chunk.merge(df_ppathl, on=[\"syear\", \"pid\"], how=\"inner\")\n",
+    "soep = soep.merge(df_ppathl, on=[\"syear\", \"pid\"], how=\"inner\")\n",
     "# merge with pequiv (TODO what is this table)\n",
-    "chunk = chunk.merge(df_pequiv, on=[\"syear\", \"pid\"], how=\"inner\")\n",
+    "soep = soep.merge(df_pequiv, on=[\"syear\", \"pid\"], how=\"inner\")\n",
     "# merge with household\n",
-    "chunk = chunk.merge(df_hh, on=[\"syear\", \"hid\"], how=\"inner\")\n",
+    "soep = soep.merge(df_hh, on=[\"syear\", \"hid\"], how=\"inner\")\n",
     "\n",
     "## CALCULATE RELEVANT VARIABLES\n",
     "# age:\n",
-    "chunk[\"age\"] = chunk[\"syear\"] - chunk[\"gebjahr\"]\n",
+    "soep[\"age\"] = soep[\"syear\"] - soep[\"gebjahr\"]\n",
     "# time stamp:\n",
-    "chunk.rename({'syear':\"year\", 'pmonin':\"month\", 'ptagin':\"day\"}, axis=1, inplace=True)\n",
-    "chunk[\"time\"] = pd.to_datetime(chunk[['year', 'month', 'day']], errors='coerce')\n",
+    "soep.rename({'syear':\"year\", 'pmonin':\"month\", 'ptagin':\"day\"}, axis=1, inplace=True)\n",
+    "soep[\"time\"] = pd.to_datetime(soep[['year', 'month', 'day']], errors='coerce')\n",
     "# drop unuseful columns:\n",
-    "chunk.drop(['year', 'month', 'day'], axis=1, inplace=True)\n",
+    "soep.drop(['year', 'month', 'day', 'gebjahr'], axis=1, inplace=True)\n",
     "# delete invalid time stamps as they cannot be merged with climate data:\n",
-    "chunk = chunk[chunk['time'].notna()]\n",
+    "soep = soep[soep['time'].notna()]\n",
     "\n",
-    "## MERGE WITH CLIMATE DF\n",
-    "final = pd.merge(chunk, df_climate, on=[\"time\", 'sloc'], how='inner')\n",
-    "\n",
-    "## SAVE TO DATABASE\n",
-    "final.to_csv(\"./prod/1_data.csv\")\n",
-    "final.to_sql(f\"{nuts_lvl}_data\", con = engine, if_exists='replace')"
+    "## SAFE DATAFRAME\n",
+    "soep.to_csv(\"./prod/soeplong.csv\", index=False)"
    ]
   }
  ],
