--- a/weather/station_info.ipynb
+++ b/weather/station_info.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -23,32 +23,334 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>id</th>\n",
+       "      <th>name</th>\n",
+       "      <th>region</th>\n",
+       "      <th>wmo</th>\n",
+       "      <th>icao</th>\n",
+       "      <th>latitude</th>\n",
+       "      <th>longitude</th>\n",
+       "      <th>elevation</th>\n",
+       "      <th>timezone</th>\n",
+       "      <th>hourly_start</th>\n",
+       "      <th>hourly_end</th>\n",
+       "      <th>daily_start</th>\n",
+       "      <th>daily_end</th>\n",
+       "      <th>monthly_start</th>\n",
+       "      <th>monthly_end</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>country</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>AE</th>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>14</td>\n",
+       "      <td>8</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>8</td>\n",
+       "      <td>8</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AF</th>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>36</td>\n",
+       "      <td>40</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>42</td>\n",
+       "      <td>40</td>\n",
+       "      <td>40</td>\n",
+       "      <td>25</td>\n",
+       "      <td>25</td>\n",
+       "      <td>13</td>\n",
+       "      <td>13</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AG</th>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>3</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AL</th>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>AM</th>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>40</td>\n",
+       "      <td>39</td>\n",
+       "      <td>3</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>41</td>\n",
+       "      <td>16</td>\n",
+       "      <td>16</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "      <td>39</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>XK</th>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>YE</th>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>11</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>12</td>\n",
+       "      <td>10</td>\n",
+       "      <td>10</td>\n",
+       "      <td>5</td>\n",
+       "      <td>5</td>\n",
+       "      <td>2</td>\n",
+       "      <td>2</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZA</th>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>137</td>\n",
+       "      <td>110</td>\n",
+       "      <td>85</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>141</td>\n",
+       "      <td>85</td>\n",
+       "      <td>85</td>\n",
+       "      <td>103</td>\n",
+       "      <td>103</td>\n",
+       "      <td>92</td>\n",
+       "      <td>92</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZM</th>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>27</td>\n",
+       "      <td>29</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>31</td>\n",
+       "      <td>26</td>\n",
+       "      <td>26</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>21</td>\n",
+       "      <td>21</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>ZW</th>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>22</td>\n",
+       "      <td>15</td>\n",
+       "      <td>15</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "      <td>20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>223 rows × 15 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "          id  name  region  wmo  icao  latitude  longitude  elevation  \\\n",
+       "country                                                                 \n",
+       "AE        15    15      14    8    15        15         15         15   \n",
+       "AF        42    42      42   36    40        42         42         42   \n",
+       "AG         3     3       3    3     2         3          3          3   \n",
+       "AL        10    10      10   10     5        10         10         10   \n",
+       "AM        41    41      40   39     3        41         41         41   \n",
+       "...      ...   ...     ...  ...   ...       ...        ...        ...   \n",
+       "XK         2     2       1    2     2         2          2          2   \n",
+       "YE        12    12      12   11    12        12         12         12   \n",
+       "ZA       141   141     137  110    85       141        141        141   \n",
+       "ZM        31    31      31   27    29        31         31         31   \n",
+       "ZW        22    22      22   22    15        22         22         22   \n",
+       "\n",
+       "         timezone  hourly_start  hourly_end  daily_start  daily_end  \\\n",
+       "country                                                               \n",
+       "AE             15            15          15           12         12   \n",
+       "AF             42            40          40           25         25   \n",
+       "AG              3             2           2            1          1   \n",
+       "AL             10            10          10            1          1   \n",
+       "AM             41            16          16           39         39   \n",
+       "...           ...           ...         ...          ...        ...   \n",
+       "XK              2             2           2            2          2   \n",
+       "YE             12            10          10            5          5   \n",
+       "ZA            141            85          85          103        103   \n",
+       "ZM             31            26          26           20         20   \n",
+       "ZW             22            15          15           20         20   \n",
+       "\n",
+       "         monthly_start  monthly_end  \n",
+       "country                              \n",
+       "AE                   8            8  \n",
+       "AF                  13           13  \n",
+       "AG                   1            1  \n",
+       "AL                   5            5  \n",
+       "AM                  39           39  \n",
+       "...                ...          ...  \n",
+       "XK                   0            0  \n",
+       "YE                   2            2  \n",
+       "ZA                  92           92  \n",
+       "ZM                  21           21  \n",
+       "ZW                  20           20  \n",
+       "\n",
+       "[223 rows x 15 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# setup cache\n",
     "Stations.cache_dir = \"./prod/.meteostat/cache\"\n",
     "\n",
     "query = Stations()\n",
-    "query.region(\"DE\")\n",
+    "query.bounds(\"DE\") #TODO: increase region size to make border cases more accurate\n",
     "stations = query.fetch()\n",
-    "stations.reset_index(inplace=True)"
+    "stations.reset_index(inplace=True)\n",
+    "stations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "path = \"prod/weather.db\"\n",
-    "con = create_engine(\"sqlite:///\"+path, echo=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -61,13 +363,12 @@
     "    'daily_start',\n",
     "    'daily_end'\n",
     "]\n",
-    "stations = stations[cols]\n",
-    "stations.rename({'id':'station_id'}, axis=1, inplace=True)"
+    "stations = stations[cols]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [
     {
@@ -178,7 +479,7 @@
        "4         DE1  Baden-Württemberg  "
       ]
      },
-     "execution_count": 20,
+     "execution_count": 41,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -202,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [
     {
@@ -226,12 +527,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>station_id</th>\n",
+       "      <th>id</th>\n",
        "      <th>latitude</th>\n",
        "      <th>longitude</th>\n",
        "      <th>elevation</th>\n",
        "      <th>daily_start</th>\n",
        "      <th>daily_end</th>\n",
+       "      <th>geometry</th>\n",
        "      <th>NUTS_CODE_3</th>\n",
        "      <th>NUTS_NAME_3</th>\n",
        "      <th>NUTS_CODE_2</th>\n",
@@ -248,7 +550,8 @@
        "      <td>7.9000</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1952-05-01</td>\n",
-       "      <td>2022-12-18</td>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>POINT (7.90000 54.18330)</td>\n",
        "      <td>DEF09</td>\n",
        "      <td>Pinneberg</td>\n",
        "      <td>DEF0</td>\n",
@@ -264,6 +567,7 @@
        "      <td>16.0</td>\n",
        "      <td>2009-02-24</td>\n",
        "      <td>2022-04-25</td>\n",
+       "      <td>POINT (8.35000 54.91670)</td>\n",
        "      <td>DEF07</td>\n",
        "      <td>Nordfriesland</td>\n",
        "      <td>DEF0</td>\n",
@@ -278,7 +582,8 @@
        "      <td>8.4167</td>\n",
        "      <td>26.0</td>\n",
        "      <td>1931-01-01</td>\n",
-       "      <td>2022-12-18</td>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>POINT (8.41670 55.01670)</td>\n",
        "      <td>DEF07</td>\n",
        "      <td>Nordfriesland</td>\n",
        "      <td>DEF0</td>\n",
@@ -293,7 +598,8 @@
        "      <td>8.9500</td>\n",
        "      <td>7.0</td>\n",
        "      <td>1973-01-01</td>\n",
-       "      <td>2022-12-18</td>\n",
+       "      <td>2023-01-04</td>\n",
+       "      <td>POINT (8.95000 54.80000)</td>\n",
        "      <td>DEF07</td>\n",
        "      <td>Nordfriesland</td>\n",
        "      <td>DEF0</td>\n",
@@ -309,6 +615,7 @@
        "      <td>28.0</td>\n",
        "      <td>1891-01-01</td>\n",
        "      <td>1974-06-30</td>\n",
+       "      <td>POINT (9.15000 54.51670)</td>\n",
        "      <td>DEF07</td>\n",
        "      <td>Nordfriesland</td>\n",
        "      <td>DEF0</td>\n",
@@ -321,29 +628,29 @@
        "</div>"
       ],
       "text/plain": [
-       "     station_id  latitude  longitude  elevation daily_start  daily_end  \\\n",
-       "1230      10015   54.1833     7.9000        4.0  1952-05-01 2022-12-18   \n",
-       "1231      10018   54.9167     8.3500       16.0  2009-02-24 2022-04-25   \n",
-       "1232      10020   55.0167     8.4167       26.0  1931-01-01 2022-12-18   \n",
-       "1233      10022   54.8000     8.9500        7.0  1973-01-01 2022-12-18   \n",
-       "1234      10026   54.5167     9.1500       28.0  1891-01-01 1974-06-30   \n",
+       "         id  latitude  longitude  elevation daily_start  daily_end  \\\n",
+       "1230  10015   54.1833     7.9000        4.0  1952-05-01 2023-01-04   \n",
+       "1231  10018   54.9167     8.3500       16.0  2009-02-24 2022-04-25   \n",
+       "1232  10020   55.0167     8.4167       26.0  1931-01-01 2023-01-04   \n",
+       "1233  10022   54.8000     8.9500        7.0  1973-01-01 2023-01-04   \n",
+       "1234  10026   54.5167     9.1500       28.0  1891-01-01 1974-06-30   \n",
        "\n",
-       "     NUTS_CODE_3    NUTS_NAME_3 NUTS_CODE_2         NUTS_NAME_2 NUTS_CODE_1  \\\n",
-       "1230       DEF09      Pinneberg        DEF0  Schleswig-Holstein         DEF   \n",
-       "1231       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
-       "1232       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
-       "1233       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
-       "1234       DEF07  Nordfriesland        DEF0  Schleswig-Holstein         DEF   \n",
+       "                      geometry NUTS_CODE_3    NUTS_NAME_3 NUTS_CODE_2  \\\n",
+       "1230  POINT (7.90000 54.18330)       DEF09      Pinneberg        DEF0   \n",
+       "1231  POINT (8.35000 54.91670)       DEF07  Nordfriesland        DEF0   \n",
+       "1232  POINT (8.41670 55.01670)       DEF07  Nordfriesland        DEF0   \n",
+       "1233  POINT (8.95000 54.80000)       DEF07  Nordfriesland        DEF0   \n",
+       "1234  POINT (9.15000 54.51670)       DEF07  Nordfriesland        DEF0   \n",
        "\n",
-       "             NUTS_NAME_1  \n",
-       "1230  Schleswig-Holstein  \n",
-       "1231  Schleswig-Holstein  \n",
-       "1232  Schleswig-Holstein  \n",
-       "1233  Schleswig-Holstein  \n",
-       "1234  Schleswig-Holstein  "
+       "             NUTS_NAME_2 NUTS_CODE_1         NUTS_NAME_1  \n",
+       "1230  Schleswig-Holstein         DEF  Schleswig-Holstein  \n",
+       "1231  Schleswig-Holstein         DEF  Schleswig-Holstein  \n",
+       "1232  Schleswig-Holstein         DEF  Schleswig-Holstein  \n",
+       "1233  Schleswig-Holstein         DEF  Schleswig-Holstein  \n",
+       "1234  Schleswig-Holstein         DEF  Schleswig-Holstein  "
       ]
      },
-     "execution_count": 21,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,29 +664,17 @@
     "stations = stations.sjoin(nuts, how=\"inner\", predicate=\"within\")\n",
     "stations.drop(\"index_right\", axis=1, inplace=True)\n",
     "stations.sort_index(inplace=True)\n",
-    "stations.drop(\"geometry\", axis=1, inplace=True)\n",
     "stations.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1116"
-      ]
-     },
-     "execution_count": 22,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# save to database\n",
-    "stations.to_sql('stationinfo', con, if_exists=\"replace\")"
+    "stations.to_file(\"prod/stationinfo.geojson\", driver=\"GeoJSON\")"
    ]
   }
  ],
