--- a/soeplong.ipynb
+++ b/soeplong.ipynb
@@ -1,18 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "markdown",
-   "id": "73bc7f62-e0cb-4004-9c63-8986ba6b27b5",
-   "metadata": {},
-   "source": [
-    "# Reading the Climate variables\n",
-    "\n",
-    "In the following we load the climate variables computed at `./weather/climate_vars.ipynb`. We index all the rows based on their `nuts` location and the timestamp of the datapoint. This will allow us to merge it with the SWB data later on.\n",
-    "\n",
-    "To know from which climate table we want to merge the data, the nuts information has to be provided"
-   ]
-  },
-  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "0b6bedb9-e30c-4dc4-8a0d-e38202ca6bcd",
@@ -21,7 +9,7 @@
    "source": [
     "# relevant imports\n",
     "import pandas as pd\n",
-    "import numpy as np\n"
+    "import numpy as np"
    ]
   },
   {
@@ -306,7 +294,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
