--- a/weather/nutsdata.ipynb
+++ b/weather/nutsdata.ipynb
@@ -35,7 +35,7 @@
     "import matplotlib.pyplot as plt\n",
     "%matplotlib inline\n",
     "\n",
-    "from src.helper import get_nuts_weather_data\n",
+    "from src.helper import read_nuts_weather_data\n",
     "import pandas as pd\n",
     "import geopandas as gp\n",
     "from tqdm import tqdm"
@@ -85,7 +85,7 @@
     "\n",
     "    # get weather data for each code\n",
     "    for code in tqdm(codes, position=0):\n",
-    "        new = get_nuts_weather_data(\n",
+    "        new = read_nuts_weather_data(\n",
     "            infofile='./prod/stationinfo.geojson',\n",
     "            dirpath='./prod/stationdata',\n",
     "            nutslvl=nuts, \n",
@@ -115,7 +115,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.0"
+   "version": "3.11.0 | packaged by conda-forge | (main, Oct 25 2022, 06:24:40) [GCC 10.4.0]"
   },
   "vscode": {
    "interpreter": {
