--- a/weatherlong.ipynb
+++ b/weatherlong.ipynb
@@ -16,7 +16,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "from weather.src.helper import read_nuts_weather_data"
    ]
   },
   {
@@ -33,7 +35,30 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "files"
+    "# reading the weather data for NUTS 1 area codes\n",
+    "df = read_nuts_weather_data('./weather/prod/weatherdata/nuts1')\n",
+    "df.head()"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Computing the Climate Variables\n",
+    "\n",
+    "..."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_monthly:pd.DataFrame\n",
+    "df_monthly = df.set_index('time').groupby('NUTS_CODE').rolling('30D').agg(['max', 'mean'])\n",
+    "df_monthly.head()"
    ]
   }
  ],
